tests/error/override_static.gw
// [contains] but cannot override
class C
{
	function static void test() {}
}

class D extends C
{
	function void test() {}
}
